[project]
name = "flake8-carrot"
description = "A plugin for Flake8; Ensuring that your Python code adheres to CarrotManMatt's opinionated style guide."
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matt Norton", email = "matt@carrotmanmatt.com" }]
keywords = ["flake8", "flake8-plugin", "linter", "python", "static analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
dependencies = ["flake8>=6", "typed_classproperties>=1.3"]
dynamic = ["readme", "version"]

[project.urls]
Issues = "https://github.com/CarrotManMatt/flake8-carrot/issues"
Releases = "https://github.com/CarrotManMatt/flake8-carrot/releases"
Repository = "https://github.com/CarrotManMatt/flake8-carrot"

[project.entry-points."flake8.extension"]
CAR = "flake8_carrot:CarrotPlugin"
TXB = "flake8_carrot:TeXBotPlugin"

[dependency-groups]
dev = [
    "astpretty>=3.0",
    { include-group = "lint-format" },
    { include-group = "pre-commit" },
    { include-group = "test" },
    { include-group = "type-check" }
]
lint-format = ["flake8", "flake8-pyproject>=1.2", "ruff>=0.14"]
package-analysis = ["pyroma>=5.0"]
pre-commit = [
    "pre-commit",
    { include-group = "lint-format" },
    { include-group = "package-analysis" }
]
test = ["pytest>=9"]
type-check = ["mypy>=1.18.1"]

[build-system]
requires = ["Pydowndoc[bin]>=2.1.1", "hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
select = ["CAR"]
extend_exclude = [".venv/", "examples/"]
require_plugins = ["flake8-carrot"]

[tool.hatch.build]
only-packages = true

[tool.hatch.metadata.hooks]
downdoc-readme = { path = "README.adoc" }

[tool.hatch.version]
raw-options = { local_scheme = "no-local-version", version_scheme = "python-simplified-semver" }
source = "vcs"

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
    "deprecated",
    "explicit-override",
    "ignore-without-code",
    "mutable-override",
    "narrowed-type-not-subtype",
    "possibly-undefined",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable"
]
exclude = ["examples/"]
extra_checks = true
no_implicit_reexport = true
strict_bytes = true
strict_equality = true
strict_equality_for_none = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["astpretty"]

[tool.pytest]
strict = true

[tool.ruff]
indent-width = 4
line-length = 95
output-format = "concise"

[tool.ruff.lint]
external = ["CAR", "TXB"]
ignore = [
    "C90",
    "COM812",
    "COM819",
    "CPY",
    "D206",
    "D212",
    "FA",
    "ICN001",
    "INP001",
    "ISC001",
    "ISC002",
    "N806",
    "PIE808",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "S603",
    "SIM910",
    "TD002",
    "TD003",
    "W191"
]
select = ["ALL", "D204", "D213", "D401"]
task-tags = ["BUG", "DONE", "FIXME", "HACK", "IDEA", "ISSUE", "NOBUG", "NOTE", "REQ", "TODO"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["abc", "date", "datetime", "re", "regex"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
quote-annotations = true
strict = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "typed_classproperties.cached_classproperty",
    "typed_classproperties.classproperty"
]
extend-ignore-names = ["BROKEN_*_MESSAGE", "INVALID_*_MESSAGE", "NO_*_MESSAGE"]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["S101"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 95

[tool.ruff.lint.pydocstyle]
convention = "google"
property-decorators = [
    "typed_classproperties.cached_classproperty",
    "typed_classproperties.classproperty"
]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "int", "str"]
max-args = 7
max-branches = 19
max-returns = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.tombi.format.rules]
indent-width = 4
line-width = 95

[tool.uv]
default-groups = ["dev"]
no-binary-package = ["flake8-carrot"]
no-build = true
package = true
required-version = ">=0.5.21"
trusted-publishing = "always"

[[tool.uv.index]]
explicit = true
name = "Test-PyPI"
publish-url = "https://test.pypi.org/legacy/"
url = "https://test.pypi.org/simple/"
